@@ -6,7 +6,7 @@ For details see the GNU Public Licence: http://www.fsf.org/copyleft/gpl.html
 ________________________________________________________________________________
 
 Example H: a pedestrian ramp  (kip  in) 
-Wed Nov  4 10:14:47 2009
+Wed Nov  4 10:23:37 2009
 ________________________________________________________________________________
 148 JOINTS;    295 MEMBERS;    1 LOAD CASES;  36 FIXED JOINTS;  
 For 2D problems, the Y-axis is vertical. 
