@@ -6,7 +6,7 @@ For details see the GNU Public Licence: http://www.fsf.org/copyleft/gpl.html
 ________________________________________________________________________________
 
 Example J: tesseract  (N  mm  ton) 
-Wed Nov  4 10:15:08 2009
+Wed Nov  4 10:23:58 2009
 ________________________________________________________________________________
 16 JOINTS;    32 MEMBERS;    1 LOAD CASES;  0 FIXED JOINTS;  
 For 2D problems, the Y-axis is vertical. 
